--- a/result_plots.ipynb
+++ b/result_plots.ipynb
@@ -2,12 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def compare_plots(parareal_file_path, picards_file_path, x_num):\n",
+    "    x_values = np.linspace(0, 100, x_num)\n",
+    "    plt.plot(x_values, [1 + x * x for x in x_values], label = \"Exact solution\")\n",
+    "    parareal_data = []\n",
+    "    picards_data = []\n",
+    "\n",
+    "    with open(parareal_file_path, 'r') as f:\n",
+    "        parareal_data = list(map(float,f.read().split(', ')))\n",
+    "\n",
+    "    with open(picards_file_path, 'r') as f:\n",
+    "        picards_data = list(map(float,f.read().split(', ')))\n",
+    "\n",
+    "    plt.plot(x_values, parareal_data, label=\"Parareal algorithm\")\n",
+    "    plt.plot(x_values, picards_data, label=\"Parallel Picard's algorithm\")\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -21,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -38,22 +56,7 @@
     }
    ],
    "source": [
-    "x_values = np.linspace(0, 100, 1024)\n",
-    "plt.plot(x_values, [1 + x * x for x in x_values], label = \"Exact solution\")\n",
-    "parareal_data1 = []\n",
-    "picards_data1 = []\n",
-    "\n",
-    "with open('plots_data/parareal1', 'r') as f:\n",
-    "    parareal_data1 = list(map(float,f.read().split(', ')))\n",
-    "\n",
-    "with open('plots_data/picards1', 'r') as f:\n",
-    "    picards_data1 = list(map(float,f.read().split(', ')))\n",
-    "\n",
-    "plt.plot(x_values, parareal_data1, label=\"Parareal algorithm\")\n",
-    "plt.plot(x_values, picards_data1, label=\"Parallel Picard's algorithm\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "compare_plots('plots_data/parareal1','plots_data/picards1', 1024)"
    ]
   },
   {
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -84,30 +87,8 @@
     }
    ],
    "source": [
-    "x_values = np.linspace(0, 100, 1024 * 16)\n",
-    "plt.plot(x_values, [1 + x * x for x in x_values], label = \"Exact solution\")\n",
-    "parareal_data1 = []\n",
-    "picards_data1 = []\n",
-    "\n",
-    "with open('plots_data/parareal2', 'r') as f:\n",
-    "    parareal_data1 = list(map(float,f.read().split(', ')))\n",
-    "\n",
-    "with open('plots_data/picards2', 'r') as f:\n",
-    "    picards_data1 = list(map(float,f.read().split(', ')))\n",
-    "\n",
-    "plt.plot(x_values, parareal_data1, label=\"Parareal algorithm\")\n",
-    "plt.plot(x_values, picards_data1, label=\"Parallel Picard's algorithm\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "compare_plots('plots_data/parareal2','plots_data/picards2', 1024 * 16)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
